2007-07-18  Johannes Schmid <jhs.gnome.org>

	* plugins/build-basic-autotools/executer.c: (execute_program):
	Fixed some of the scratchbox stuff but the environment is
	still broken

2007-07-18  Johannes Schmid <jhs@gnome.org>

	* libanjuta/anjuta-plugin-manager.c: (on_plugin_activated),
	(on_plugin_deactivated), (get_plugin_loader_type):
	* plugins/glade/plugin.c: (on_close_activated), (on_shell_destroy),
	(activate_plugin), (deactivate_plugin),
	(glade_plugin_instance_init):
	
	Fixed glade plugin deactivation

2007-07-18  Johannes Schmid <jhs@gnome.org>

	* plugins/document-manager/anjuta-docman.c:
	(anjuta_docman_add_document):
	* plugins/glade/anjuta-design-document.c: (ifile_get_uri):
	
	Fixed path display in document manager with glade files

2007-07-17  Johannes Schmid <jhs@gnome.org>

	* libanjuta/interfaces/Makefile.am.iface:
	* pixmaps/Makefile.am:
	* plugins/cvs-plugin/plugin.c: (value_added_current_editor):
	* plugins/debug-manager/plugin.c: (value_added_current_editor),
	(value_removed_current_editor):
	* plugins/document-manager/anjuta-docman.c: (on_editor_save_point),
	(anjuta_docman_set_current_document):
	* plugins/document-manager/plugin.c: (on_editor_update_ui),
	(on_editor_added), (on_editor_changed):
	* plugins/glade/Makefile.am:
	* plugins/glade/anjuta-design-document.c:
	(anjuta_design_document_instance_init),
	(anjuta_design_document_set_property),
	(anjuta_design_document_get_property),
	(anjuta_design_document_class_init), (anjuta_design_document_new),
	(ifile_open), (ifile_get_uri), (ifile_iface_init):
	* plugins/glade/anjuta-design-document.h:
	* plugins/glade/anjuta-glade-notebook.c:
	* plugins/glade/anjuta-glade-notebook.h:
	* plugins/glade/plugin.c: (value_added_current_editor),
	(value_removed_current_editor), (glade_update_ui),
	(on_close_activated), (on_glade_project_changed),
	(glade_plugin_add_project), (activate_plugin), (deactivate_plugin),
	(ifile_open):
	* plugins/language-support-cpp-java/plugin.c: