@@ -287,13 +287,13 @@ value_added_current_editor (AnjutaPlugin *plugin, const char *name,
 	IAnjutaEditor *editor;
 	DebugManagerPlugin *self;
 
-	editor = IANJUTA_EDITOR (g_value_get_object (value));
-	
 	if (!IANJUTA_IS_EDITOR(editor))
 	{
 		self->current_editor = NULL;
 		return;
 	}
+	
+	editor = IANJUTA_EDITOR (g_value_get_object (value));
 	
 	self = ANJUTA_PLUGIN_DEBUG_MANAGER (plugin);
 	self->current_editor = editor;
